deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api-app
  template:
    metadata:
      labels:
        app: user-api-app
    spec:
      containers:
        - name: users
          image: apalyvoda/homework_service:v1
          ports:
            - name: web
              containerPort: 3000
