service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-app-service
spec:
  selector:
    app: user-api-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: web
  type: NodePort
